add first api controller

--- a/OmniselloTask/Views/Home/Index.cshtml
+++ b/OmniselloTask/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Omniselo Task";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <a class="btn" asp-controller="Vegetables" asp-action="Index">Warzywa</a>
+    <h1 class="display-4">Zadanie rekrutacyjne</h1>
+    
+    <a class="btn" asp-controller="Vegetables" asp-action="Index">Vegetables</a>
 </div>
